[gd_scene load_steps=7 format=3 uid="uid://dp0oysvtwt18b"]

[ext_resource type="Texture2D" uid="uid://4peqnnu1tk5x" path="res://assets/art/textures/texture_10.png" id="1_1d5jl"]
[ext_resource type="Script" uid="uid://ory4vut2kgrx" path="res://scripts/objects/moving_platform.gd" id="1_rrka8"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_rrka8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rrka8"]
albedo_texture = ExtResource("1_1d5jl")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_1d5jl"]
data = PackedVector3Array(-3.5355341, -0.5, -3.5355334, -4.1573477, -0.5, -2.7778516, 0, -0.5, 0, -4.1573477, -0.5, -2.7778516, -4.6193976, -0.5, -1.9134171, 0, -0.5, 0, -4.6193976, -0.5, -1.9134171, -4.9039264, -0.5, -0.97545123, 0, -0.5, 0, -4.9039264, -0.5, -0.97545123, -5, -0.5, -4.371139e-07, 0, -0.5, 0, -3.5355341, -0.5, -3.5355334, -2.777852, -0.5, -4.157347, -2.777852, 0.5, -4.157347, -4.1573477, -0.5, -2.7778516, -3.5355341, -0.5, -3.5355334, -3.5355341, 0.5, -3.5355334, -4.9039264, -0.5, -0.97545123, -4.6193976, -0.5, -1.9134171, -4.6193976, 0.5, -1.9134171, -4.6193976, -0.5, -1.9134171, -4.1573477, -0.5, -2.7778516, -4.1573477, 0.5, -2.7778516, -5, -0.5, -4.371139e-07, -4.9039264, -0.5, -0.97545123, -4.9039264, 0.5, -0.97545123, -2.777852, -0.5, -4.157347, -3.5355341, -0.5, -3.5355334, 0, -0.5, 0, -1.9134178, -0.5, -4.6193976, -2.777852, -0.5, -4.157347, 0, -0.5, 0, -0.97545195, -0.5, -4.9039264, -1.9134178, -0.5, -4.6193976, 0, -0.5, 0, 5.9624405e-08, -0.5, -5, -0.97545195, -0.5, -4.9039264, 0, -0.5, 0, -2.777852, -0.5, -4.157347, -1.9134178, -0.5, -4.6193976, -1.9134178, 0.5, -4.6193976, -1.9134178, -0.5, -4.6193976, -0.97545195, -0.5, -4.9039264, -0.97545195, 0.5, -4.9039264, -0.97545195, -0.5, -4.9039264, 5.9624405e-08, -0.5, -5, 5.9624405e-08, 0.5, -5, -5, -0.5, -4.371139e-07, -4.9039264, -0.5, 0.9754515, 0, -0.5, 0, -4.9039264, -0.5, 0.9754515, -4.6193976, -0.5, 1.9134175, 0, -0.5, 0, -4.6193976, -0.5, 1.9134175, -4.157348, -0.5, 2.7778509, 0, -0.5, 0, -4.157348, -0.5, 2.7778509, -3.535534, -0.5, 3.535534, 0, -0.5, 0, -4.9039264, -0.5, 0.9754515, -5, -0.5, -4.371139e-07, -5, 0.5, -4.371139e-07, -4.6193976, -0.5, 1.9134175, -4.9039264, -0.5, 0.9754515, -4.9039264, 0.5, 0.9754515, -4.157348, -0.5, 2.7778509, -4.6193976, -0.5, 1.9134175, -4.6193976, 0.5, 1.9134175, -3.535534, -0.5, 3.535534, -4.157348, -0.5, 2.7778509, -4.157348, 0.5, 2.7778509, -2.7778509, -0.5, 4.157348, -3.535534, -0.5, 3.535534, -3.535534, 0.5, 3.535534, -3.535534, -0.5, 3.535534, -2.7778509, -0.5, 4.157348, 0, -0.5, 0, -2.7778509, -0.5, 4.157348, -1.913417, -0.5, 4.6193976, 0, -0.5, 0, -1.913417, -0.5, 4.6193976, -0.9754516, -0.5, 4.9039264, 0, -0.5, 0, -0.9754516, -0.5, 4.9039264, -2.1855695e-07, -0.5, 5, 0, -0.5, 0, -1.913417, -0.5, 4.6193976, -2.7778509, -0.5, 4.157348, -2.7778509, 0.5, 4.157348, -0.9754516, -0.5, 4.9039264, -1.913417, -0.5, 4.6193976, -1.913417, 0.5, 4.6193976, -2.1855695e-07, -0.5, 5, -0.9754516, -0.5, 4.9039264, -0.9754516, 0.5, 4.9039264, -3.5355341, 0.5, -3.5355334, -4.1573477, 0.5, -2.7778516, -4.1573477, -0.5, -2.7778516, -2.777852, 0.5, -4.157347, -3.5355341, 0.5, -3.5355334, -3.5355341, -0.5, -3.5355334, -4.1573477, 0.5, -2.7778516, -4.6193976, 0.5, -1.9134171, -4.6193976, -0.5, -1.9134171, -4.6193976, 0.5, -1.9134171, -4.9039264, 0.5, -0.97545123, -4.9039264, -0.5, -0.97545123, -4.9039264, 0.5, -0.97545123, -5, 0.5, -4.371139e-07, -5, -0.5, -4.371139e-07, -4.1573477, 0.5, -2.7778516, -3.5355341, 0.5, -3.5355334, 0, 0.5, 0, -4.6193976, 0.5, -1.9134171, -4.1573477, 0.5, -2.7778516, 0, 0.5, 0, -4.9039264, 0.5, -0.97545123, -4.6193976, 0.5, -1.9134171, 0, 0.5, 0, -5, 0.5, -4.371139e-07, -4.9039264, 0.5, -0.97545123, 0, 0.5, 0, -1.9134178, 0.5, -4.6193976, -2.777852, 0.5, -4.157347, -2.777852, -0.5, -4.157347, -0.97545195, 0.5, -4.9039264, -1.9134178, 0.5, -4.6193976, -1.9134178, -0.5, -4.6193976, 5.9624405e-08, 0.5, -5, -0.97545195, 0.5, -4.9039264, -0.97545195, -0.5, -4.9039264, -3.5355341, 0.5, -3.5355334, -2.777852, 0.5, -4.157347, 0, 0.5, 0, -2.777852, 0.5, -4.157347, -1.9134178, 0.5, -4.6193976, 0, 0.5, 0, -1.9134178, 0.5, -4.6193976, -0.97545195, 0.5, -4.9039264, 0, 0.5, 0, -0.97545195, 0.5, -4.9039264, 5.9624405e-08, 0.5, -5, 0, 0.5, 0, -5, 0.5, -4.371139e-07, -4.9039264, 0.5, 0.9754515, -4.9039264, -0.5, 0.9754515, -4.9039264, 0.5, 0.9754515, -4.6193976, 0.5, 1.9134175, -4.6193976, -0.5, 1.9134175, -4.6193976, 0.5, 1.9134175, -4.157348, 0.5, 2.7778509, -4.157348, -0.5, 2.7778509, -4.157348, 0.5, 2.7778509, -3.535534, 0.5, 3.535534, -3.535534, -0.5, 3.535534, -3.535534, 0.5, 3.535534, -2.7778509, 0.5, 4.157348, -2.7778509, -0.5, 4.157348, -4.9039264, 0.5, 0.9754515, -5, 0.5, -4.371139e-07, 0, 0.5, 0, -4.6193976, 0.5, 1.9134175, -4.9039264, 0.5, 0.9754515, 0, 0.5, 0, -4.157348, 0.5, 2.7778509, -4.6193976, 0.5, 1.9134175, 0, 0.5, 0, -3.535534, 0.5, 3.535534, -4.157348, 0.5, 2.7778509, 0, 0.5, 0, -2.7778509, 0.5, 4.157348, -1.913417, 0.5, 4.6193976, -1.913417, -0.5, 4.6193976, -1.913417, 0.5, 4.6193976, -0.9754516, 0.5, 4.9039264, -0.9754516, -0.5, 4.9039264, -0.9754516, 0.5, 4.9039264, -2.1855695e-07, 0.5, 5, -2.1855695e-07, -0.5, 5, -2.7778509, 0.5, 4.157348, -3.535534, 0.5, 3.535534, 0, 0.5, 0, -1.913417, 0.5, 4.6193976, -2.7778509, 0.5, 4.157348, 0, 0.5, 0, -0.9754516, 0.5, 4.9039264, -1.913417, 0.5, 4.6193976, 0, 0.5, 0, -2.1855695e-07, 0.5, 5, -0.9754516, 0.5, 4.9039264, 0, 0.5, 0, 0.97545207, -0.5, -4.9039264, 5.9624405e-08, -0.5, -5, 0, -0.5, 0, 1.913418, -0.5, -4.619397, 0.97545207, -0.5, -4.9039264, 0, -0.5, 0, 2.7778504, -0.5, -4.1573486, 1.913418, -0.5, -4.619397, 0, -0.5, 0, 3.5355332, -0.5, -3.5355344, 2.7778504, -0.5, -4.1573486, 0, -0.5, 0, 5.9624405e-08, -0.5, -5, 0.97545207, -0.5, -4.9039264, 0.97545207, 0.5, -4.9039264, 0.97545207, -0.5, -4.9039264, 1.913418, -0.5, -4.619397, 1.913418, 0.5, -4.619397, 1.913418, -0.5, -4.619397, 2.7778504, -0.5, -4.1573486, 2.7778504, 0.5, -4.1573486, 4.157348, -0.5, -2.7778516, 3.5355332, -0.5, -3.5355344, 0, -0.5, 0, 4.6193976, -0.5, -1.9134171, 4.157348, -0.5, -2.7778516, 0, -0.5, 0, 4.9039264, -0.5, -0.9754512, 4.6193976, -0.5, -1.9134171, 0, -0.5, 0, 5, -0.5, 0, 4.9039264, -0.5, -0.9754512, 0, -0.5, 0, 2.7778504, -0.5, -4.1573486, 3.5355332, -0.5, -3.5355344, 3.5355332, 0.5, -3.5355344, 3.5355332, -0.5, -3.5355344, 4.157348, -0.5, -2.7778516, 4.157348, 0.5, -2.7778516, 4.157348, -0.5, -2.7778516, 4.6193976, -0.5, -1.9134171, 4.6193976, 0.5, -1.9134171, 4.6193976, -0.5, -1.9134171, 4.9039264, -0.5, -0.9754512, 4.9039264, 0.5, -0.9754512, 4.9039264, -0.5, -0.9754512, 5, -0.5, 0, 5, 0.5, 0, -2.1855695e-07, -0.5, 5, 0.97545177, -0.5, 4.9039264, 0, -0.5, 0, 0.97545177, -0.5, 4.9039264, 1.9134171, -0.5, 4.6193976, 0, -0.5, 0, 1.9134171, -0.5, 4.6193976, 2.777851, -0.5, 4.157348, 0, -0.5, 0, 2.777851, -0.5, 4.157348, 3.535534, -0.5, 3.535534, 0, -0.5, 0, 0.97545177, -0.5, 4.9039264, -2.1855695e-07, -0.5, 5, -2.1855695e-07, 0.5, 5, 1.9134171, -0.5, 4.6193976, 0.97545177, -0.5, 4.9039264, 0.97545177, 0.5, 4.9039264, 2.777851, -0.5, 4.157348, 1.9134171, -0.5, 4.6193976, 1.9134171, 0.5, 4.6193976, 4.9039264, -0.5, 0.9754516, 5, -0.5, 0, 0, -0.5, 0, 4.6193976, -0.5, 1.9134173, 4.9039264, -0.5, 0.9754516, 0, -0.5, 0, 4.157348, -0.5, 2.777851, 4.6193976, -0.5, 1.9134173, 0, -0.5, 0, 3.535534, -0.5, 3.535534, 4.157348, -0.5, 2.777851, 0, -0.5, 0, 5, -0.5, 0, 4.9039264, -0.5, 0.9754516, 4.9039264, 0.5, 0.9754516, 4.6193976, -0.5, 1.9134173, 4.157348, -0.5, 2.777851, 4.157348, 0.5, 2.777851, 4.9039264, -0.5, 0.9754516, 4.6193976, -0.5, 1.9134173, 4.6193976, 0.5, 1.9134173, 4.157348, -0.5, 2.777851, 3.535534, -0.5, 3.535534, 3.535534, 0.5, 3.535534, 3.535534, -0.5, 3.535534, 2.777851, -0.5, 4.157348, 2.777851, 0.5, 4.157348, 0.97545207, 0.5, -4.9039264, 5.9624405e-08, 0.5, -5, 5.9624405e-08, -0.5, -5, 1.913418, 0.5, -4.619397, 0.97545207, 0.5, -4.9039264, 0.97545207, -0.5, -4.9039264, 2.7778504, 0.5, -4.1573486, 1.913418, 0.5, -4.619397, 1.913418, -0.5, -4.619397, 5.9624405e-08, 0.5, -5, 0.97545207, 0.5, -4.9039264, 0, 0.5, 0, 0.97545207, 0.5, -4.9039264, 1.913418, 0.5, -4.619397, 0, 0.5, 0, 1.913418, 0.5, -4.619397, 2.7778504, 0.5, -4.1573486, 0, 0.5, 0, 2.7778504, 0.5, -4.1573486, 3.5355332, 0.5, -3.5355344, 0, 0.5, 0, 3.5355332, 0.5, -3.5355344, 2.7778504, 0.5, -4.1573486, 2.7778504, -0.5, -4.1573486, 4.157348, 0.5, -2.7778516, 3.5355332, 0.5, -3.5355344, 3.5355332, -0.5, -3.5355344, 4.6193976, 0.5, -1.9134171, 4.157348, 0.5, -2.7778516, 4.157348, -0.5, -2.7778516, 4.9039264, 0.5, -0.9754512, 4.6193976, 0.5, -1.9134171, 4.6193976, -0.5, -1.9134171, 5, 0.5, 0, 4.9039264, 0.5, -0.9754512, 4.9039264, -0.5, -0.9754512, 3.5355332, 0.5, -3.5355344, 4.157348, 0.5, -2.7778516, 0, 0.5, 0, 4.157348, 0.5, -2.7778516, 4.6193976, 0.5, -1.9134171, 0, 0.5, 0, 4.6193976, 0.5, -1.9134171, 4.9039264, 0.5, -0.9754512, 0, 0.5, 0, 4.9039264, 0.5, -0.9754512, 5, 0.5, 0, 0, 0.5, 0, -2.1855695e-07, 0.5, 5, 0.97545177, 0.5, 4.9039264, 0.97545177, -0.5, 4.9039264, 0.97545177, 0.5, 4.9039264, 1.9134171, 0.5, 4.6193976, 1.9134171, -0.5, 4.6193976, 1.9134171, 0.5, 4.6193976, 2.777851, 0.5, 4.157348, 2.777851, -0.5, 4.157348, 0.97545177, 0.5, 4.9039264, -2.1855695e-07, 0.5, 5, 0, 0.5, 0, 1.9134171, 0.5, 4.6193976, 0.97545177, 0.5, 4.9039264, 0, 0.5, 0, 2.777851, 0.5, 4.157348, 1.9134171, 0.5, 4.6193976, 0, 0.5, 0, 3.535534, 0.5, 3.535534, 2.777851, 0.5, 4.157348, 0, 0.5, 0, 4.9039264, 0.5, 0.9754516, 5, 0.5, 0, 5, -0.5, 0, 4.6193976, 0.5, 1.9134173, 4.9039264, 0.5, 0.9754516, 4.9039264, -0.5, 0.9754516, 4.157348, 0.5, 2.777851, 4.6193976, 0.5, 1.9134173, 4.6193976, -0.5, 1.9134173, 2.777851, 0.5, 4.157348, 3.535534, 0.5, 3.535534, 3.535534, -0.5, 3.535534, 3.535534, 0.5, 3.535534, 4.157348, 0.5, 2.777851, 4.157348, -0.5, 2.777851, 5, 0.5, 0, 4.9039264, 0.5, 0.9754516, 0, 0.5, 0, 4.9039264, 0.5, 0.9754516, 4.6193976, 0.5, 1.9134173, 0, 0.5, 0, 4.6193976, 0.5, 1.9134173, 4.157348, 0.5, 2.777851, 0, 0.5, 0, 4.157348, 0.5, 2.777851, 3.535534, 0.5, 3.535534, 0, 0.5, 0)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rrka8"]
height = 0.4
radius = 5.0

[node name="MovingPlatform" type="AnimatableBody3D"]
collision_layer = 2
collision_mask = 0
physics_material_override = SubResource("PhysicsMaterial_rrka8")
script = ExtResource("1_rrka8")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
collision_layer = 2
collision_mask = 0
radius = 5.0
height = 1.0
sides = 32
material = SubResource("StandardMaterial3D_rrka8")

[node name="CSGBakedCollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConcavePolygonShape3D_1d5jl")

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="MarbleDetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MarbleDetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7499995, 0)
shape = SubResource("CylinderShape3D_rrka8")

[connection signal="timeout" from="PauseTimer" to="." method="_on_pause_timer_timeout"]
[connection signal="body_entered" from="MarbleDetectionArea" to="." method="_on_marble_detection_area_body_entered"]
[connection signal="body_exited" from="MarbleDetectionArea" to="." method="_on_marble_detection_area_body_exited"]
